# dapp-scaffold

./: README.md  package.json
program/: Cargo.toml
program/src/: lib.rs
public/: index.html
src/: routes.tsx
src/components/AppBar/: index.tsx
src/components/ConnectButton/: index.tsx
src/components/Layout/: index.tsx
src/components/Settings/: index.tsx
src/constants/: labels.ts  math.ts  programs.ts
src/contexts/: endpoint.tsx
src/hooks/: hooks.ts
src/utils/: effects.ts
src/views/app/: index.tsx
